discussion/kv_engine/177012/177012_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Add standalone unit test for GetKeys

Change-Id: Ie635671f3ab5cccc734ed6733b6d163405b05b61

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-04 04:49:59.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-04 05:38:23.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18578/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:261:30: error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
                        std::this_thread::sleep_for(
                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18578/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:261:30:
error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18578/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19685/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [76/160]: disk>RAM delete paged-out...../kv_engine/engines/ep/tests/ep_testsuite.cc:4372 Test failed: `" (Expected `0", got `1" - Unexpected bg_fetched after del/get)
[2022-07-04T05:14:53.292Z] (318 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19685/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17729/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47339/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39790/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8249/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20462/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20810/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21452/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8348/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28843/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
